fix latest replies shortcode

--- a/boss-child/css/custom.css
+++ b/boss-child/css/custom.css
@@ -1218,7 +1218,8 @@ input.bpmts-feedback-form-submit-button {
   color: #042c41;
 }
 
-.bbp-topic-revision-log {
+.bbp-topic-revision-log,
+.bbp-reply-revision-log {
   display: none;
 }
 
