add text to top of Library page

--- a/boss-child/css/custom.css
+++ b/boss-child/css/custom.css
@@ -1253,3 +1253,8 @@ input.bpmts-feedback-form-submit-button {
   float: right;
   margin-right: 68px;
 }
+
+.pisa-library-intro {
+  margin-bottom: 3rem;
+  max-width: 680px;
+}
