--- a/boss-child/css/custom.css
+++ b/boss-child/css/custom.css
@@ -1042,6 +1042,10 @@ body:not(.boxed) #bbpress-forums .subheader {
 	margin-bottom: 1em;
 }
 
+.single-case .content-container p {
+  text-indent: 10px;
+}
+
 .single-case .side-column .description-tags {
 	background: transparent;
 }
