transform the other related URL fields to a multiple value field

--- a/boss-child/css/custom.css
+++ b/boss-child/css/custom.css
@@ -1389,3 +1389,8 @@ input.bpmts-feedback-form-submit-button {
  .padding40 {
    padding: 40px;
  }
+
+.questions,
+.materials > * {
+  margin-bottom: 40px;
+}
